# rclp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DIRECTION.md  LICENSE  README.md  SECURITY.md  pyproject.toml
agents/: core_library_engineer.md  docs_conformance_lead.md  edge_runtime_engineer.md  protocol_architect.md  security_reviewer.md  simulation_engineer.md
crates/rclp-edge-verifier/: Cargo.toml  README.md
crates/rclp-edge-verifier/src/: audit.rs  canonical_json.rs  crypto.rs  errors.rs  lib.rs  replay.rs  types.rs  verifier.rs
crates/rclp-edge-verifier/tests/: vector_tests.rs
docs/: ADAPTER_ENFORCEMENT_CONTRACT.md  ADOPTION_LADDER.md  API_STYLE.md  ARCHITECTURE.md  ASSEMBLY_LEDGER.md  COMMERCIAL_BOUNDARY.md  CONFORMANCE_CHECKLIST.md  CONTROLLED_REVIEW_PACKET.md  CRYPTO_PROFILES.md  CUSTOMER_CALL_PACKET.md  CUSTOMER_CALL_READINESS_CHECKLIST.md  CUSTOMER_VALIDATION_MEMO.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  DEPLOYMENT_SHAPES.md  DESIGN_TASTE.md  ENGINEERING_DOCTRINE.md  EVALS.md  FIELD_NOTES_TEMPLATE.md  FIRST_CALL_TARGET_PROFILE.md  GOVERNANCE.md  INTEGRATION_SKETCH_REMOTE_ASSIST.md  LAMBDA_ISAAC_SIM_SETUP.md  NETWORK_FAULT_INJECTION.md  NEXT_THREAD_MAP.md  OBSERVE_ONLY_SAMPLE_REPORT.md  PMF_RESEARCH_GUARDRAILS.md  POLICY_OWNERSHIP.md  POST_T12_SEQUENCE_PLAN.md  PROTOCOL_SPEC_DRAFT.md  RELEASE_CHECKLIST.md  RELEASE_READINESS.md  ROADMAP.md  RUST_EDGE_VERIFIER.md  SAFETY_BOUNDARY.md  SECURITY_DOCTRINE.md  SECURITY_REVIEW_NOTES.md  STACK_PLACEMENT.md  START_HERE_FOR_VALIDATION.md  TECHNICAL_FAQ.md  (+5 more)
isaac_sim/: README.md
tests/: test_audit.py  (+7 more)
(+113 files in other folders)
